Add new public topic function implemented. Few bug fix & performance optimized.

--- a/etc/config.json
+++ b/etc/config.json
@@ -12,7 +12,7 @@
     }
   },
   "security": {
-    "registration_enabled": false,
+    "registration_enabled": true,
     "key": "hello",
     "secret": "12345"
   }
